# BeatsUpload

./: .gitignore  README.md  database.py  file_processing.py  main.py  processor.py  pyproject.toml  requirements.txt  telegram_module.py  video_creation.py  youtube.py
beatstars/: __init__.py  beatstars_uploader.py
key_finder/: __init__.py  ai.py  detector.py  script.py
